--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MIDS 77 - Metodologias Ágeis e Versionamento</title>
+  <title>MI 79 - Metodologias Ágeis e Versionamento</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
