Adicionando o Emanuel Filipi Bueno de Souza

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
     <li>Gabriel Leopoldo Wodtke</li>
-    <li>Nome do aluno 2</li>
+    <li>Emanuel Filipi Bueno de Souza</li>
 
   </ul>
 
