Adicionar o nome Denis Lindner

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <p>Lista de alunos participantes:</p>
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
-    <li>Nome do aluno</li>
-    <li>Nome do aluno 2</li>
-
+    <li>Denis Lindner</li>
   </ul>
 
 </body>
