--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>Lista de alunos participantes:</p>
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
-    <li>Nome Aluno</li>
+    <li>Gabriel Leopoldo Wodtke</li>
     <li>Nome do aluno 2</li>
 
   </ul>
