Adiciona o nome Guilherme Döge a lista de nomes

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
 
     <li>Emanuel Filipi Bueno de Souza</li>
-
+    <li>Guilherme Döge</li>
     <li>Gustavo Henrique Heck</li>
-    <li>Nome do aluno 2</li>
 
   </ul>
 
