--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
     <li>Nome do aluno</li>
-    <li>Nome do aluno 2</li>
+    <li>Adriane Victoria Cardoso Czycza</li>
 
   </ul>
 
