Adicionar nome Denis Lindner

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li>Gabriel Leopoldo Wodtke</li>
     <li>Emanuel Filipi Bueno de Souza</li>
     <li>Matheus de Oliveira</li>
+    <li>Denis Lindner</li>
   </ul>
 
 </body>
