--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Alunos devem adicionar seus nomes abaixo -->
     <li>Gabriel Leopoldo Wodtke</li>
     <li>Emanuel Filipi Bueno de Souza</li>
-    <li>Matheus de Oliveira</li>
+    <li>Gustavo Henrique Heck</li>
   </ul>
 
 </body>
