adiciona nome Bruno Athanazio Ferreira

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <p>Lista de alunos participantes:</p>
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
-    <li>David Hillesheim</li>
-    <li>Nome do aluno 2</li>
+    <li>Bruno Athanazio Ferreira</li>
 
   </ul>
 
