Adiciona Vinícius Lopes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
     <li>David Hillesheim</li>
-    <li>Nome do aluno 2</li>
+    <li>Vinícius Lopes</li>
 
   </ul>
 
