Adiciona nome David Hillesheim

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li>Emanuel Filipi Bueno de Souza</li>
     <li>Matheus de Oliveira</li>
     <li>Denis Lindner</li>
+    <li>David Hillesheim</li>
   </ul>
 
 </body>
