feat: adiciona nome Samuel da Silva Mello na lista de alunos.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <ul>
     <!-- Alunos devem adicionar seus nomes abaixo -->
 <<<<<<<<< Temporary merge branch 1
-    <li>Gabriel Leopoldo Wodtke</li>
-    <li>Emanuel Filipi Bueno de Souza</li>
+    <li>Samuel da Silva Mello</li>
   </ul>
 
 </body>
