Colocando nome na branch

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   <h2>Turma: MI 79</h2>
   <p>Lista de alunos participantes:</p>
   <ul>
-    <!-- Alunos devem adicionar seus nomes abaixo -->
-    <li>Nome do aluno</li>
-    <li>Nome do aluno 2</li>
-
+    <li>Gabriel Leopoldo Wodtke</li>
+    <li>Emanuel Filipi Bueno de Souza</li>
+    <li>Gustavo Henrique Heck</li>
   </ul>
 
 </body>
