Adiciona nome Vinícius Lopes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li>Matheus de Oliveira</li>
     <li>Denis Lindner</li>
     <li>David Hillesheim</li>
+    <li>Vinícius Lopes</li>
   </ul>
 
 </body>
