Adicionar Cássio Stein Paulus

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li>David Hillesheim</li>
     <li>Matheus de Borba da Silva</li>
     <li>Vinícius Lopes</li>
+    <li>Cássio Stein Paulus</li>
   </ul>
 
 </body>
