Adiciona nome Junior Gabriel Antuens de Souza

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li>Matheus de Borba da Silva</li>
     <li>Vinícius Lopes</li>
     <li>Cássio Stein Paulus</li>
+    <li>Junior Gabriel Antunes de Souza</li>
   </ul>
 
 </body>
