--- a/index.html
+++ b/index.html
@@ -14,11 +14,22 @@
   <h2>Turma: MI 79</h2>
   <p>Lista de alunos participantes:</p>
   <ul>
+    <!-- Alunos devem adicionar seus nomes abaixo -->
+    <li>Arthur Batista Mourão</li>
+    <li>Bruno Athanazio Ferreira</li>
+    <li>Vinicius Deretti</li>
     <li>Gabriel Leopoldo Wodtke</li>
     <li>Emanuel Filipi Bueno de Souza</li>
+    <li>Guilherme Döge</li>
+    <li>Matheus de Oliveira</li>
+    <li>Denis Lindner</li>
+    <li>David Hillesheim</li>
+    <li>Matheus de Borba da Silva</li>
+    <li>Vinícius Lopes</li>
+    <li>Cássio Stein Paulus</li>
     <li>Gustavo Henrique Heck</li>
   </ul>
-
+d
 </body>
 
 </html>
