--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li>Denis Lindner</li>
     <li>David Hillesheim</li>
     <li>Matheus de Borba da Silva</li>
+    <li>Bruno Gustavo Kannenberg</li>
 
     
   </ul>
