--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <li>Vinícius Lopes</li>
     <li>Cássio Stein Paulus</li>
     <li>Junior Gabriel Antunes de Souza</li>
+    <li>Matheus Eichendorf</li>
   </ul>
 
 </body>
