Adicionou o nome Gilberto a Lista

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <li>Cássio Stein Paulus</li>
     <li>Junior Gabriel Antunes de Souza</li>
     <li>Matheus Eichendorf</li>
+    <li>Gilberto Clebe de Souza Lima</li>
   </ul>
 
 </body>
